<?xml version="1.0" encoding="utf-8"?>


<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/corpo">



    <!--<android.support.design.widget.FloatingActionButton-->
        <!--android:id="@+id/fab"-->
        <!--android:layout_width="60dp"-->
        <!--android:layout_height="60dp"-->
        <!--android:layout_marginBottom="1dp"-->
        <!--android:layout_marginEnd="16dp"-->
        <!--android:layout_marginRight="16dp"-->
        <!--android:clickable="true"-->
        <!--android:background="@drawable/noprofile"-->
        <!--app:backgroundTint=""-->
        <!--app:borderWidth="0dp"-->
        <!--app:layout_anchor="@id/corpo"-->
        <!--app:layout_anchorGravity="top|right"-->
        <!--android:layout_marginTop="25dp"-->
        <!--/>-->


    <android.support.v7.widget.Toolbar
        android:id="@+id/tb_main"
        android:elevation="4dp"
        android:layout_height="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:layout_alignParentLeft="true"
        android:minHeight="?attr/actionBarSize"
        android:background="@color/myPrimaryColor"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">


    </android.support.v7.widget.Toolbar>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".TelaPrincipal"
        android:layout_marginTop="?attr/actionBarSize">


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView android:text="@string/titulo" android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/titulo"
                android:layout_gravity="center_horizontal"/>

            <ImageView
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:id="@+id/fotografia"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/noprofile"/>

            <!-- Nome Completo-->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp">

                <EditText
                    android:id="@+id/nome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nome"
                    android:inputType="text"
                    android:textColor="@android:color/black"/>

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!-- Idade -->
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp">

                    <EditText
                        android:layout_width="70dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/idade"
                        android:layout_marginRight="10dp"
                        android:maxLength="2"
                        android:inputType="number"
                        android:hint="@string/idade"
                        android:textColor="@android:color/black"/>

                </android.support.design.widget.TextInputLayout>

                <!-- Peso -->
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp">

                    <EditText
                        android:layout_width="60dp" android:layout_height="wrap_content"
                        android:id="@+id/peso"
                        android:layout_marginRight="10dp"
                        android:maxLength="3"
                        android:inputType="number"
                        android:hint="@string/peso"
                        android:textColor="@android:color/black"/>

                </android.support.design.widget.TextInputLayout>

                <!-- Altura -->
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp">

                    <EditText
                        android:layout_width="80dp" android:layout_height="wrap_content"
                        android:id="@+id/altura"
                        android:maxLength="4"
                        android:inputType="number"
                        android:hint="@string/altura"
                        android:textColor="@android:color/black"/>

                </android.support.design.widget.TextInputLayout>
            </LinearLayout>


            <!-- Tamanho da Camisa -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tamanho"/>

            <LinearLayout
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" android:id="@+id/tamanhos">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/tamP"
                        android:text="P"/>

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/tamM"
                        android:text="M"/>

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/tamG"
                        android:text="G"/>

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/tamGG"
                        android:text="GG"/>

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/tamEG"
                        android:text="EG"/>

                </RadioGroup>

            </LinearLayout>


            <!-- Telefone -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/telefone"
                    android:id="@+id/telefone"
                    android:maxLength="10" android:inputType="number"
                    android:textColor="@android:color/black"/>


            </android.support.design.widget.TextInputLayout>

            <!-- Contato de Emergência -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/contatoEmergencia"
                    android:id="@+id/contatoEmergencia"
                    android:maxLength="10" android:inputType="number"
                    android:textColor="@android:color/black"/>

            </android.support.design.widget.TextInputLayout>

            <!-- Nome do Contato de Emergência -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nomeContato"
                    android:id="@+id/nomeContatoEmergencia"
                    android:inputType="text"
                    android:textColor="@android:color/black"/>

            </android.support.design.widget.TextInputLayout>

            <!-- Email -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:id="@+id/email"
                    android:inputType="textEmailAddress"
                    android:textColor="@android:color/black"/>

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pagamento"/>

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sim"
                    android:id="@+id/pagamento"/>

            </LinearLayout>

            <Button
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:id="@+id/botaoSalvar"
                android:text="@string/salvar"
                android:layout_gravity="center_horizontal"/>

        </LinearLayout>

    </ScrollView>

</android.support.design.widget.CoordinatorLayout>